crates/tsuno-driver/tests/fixtures/snapshots/pass/rejects_open_mutable_reference_after_abstract_call.rs
fn opaque(_: &mut i32) {}

fn bad_close(mut x: i32) {
    let r = &mut x;
    opaque(r);
}

fn main() {}
