crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_uninitialized_points_to_read.rs
unsafe fn read_i32(p: *mut i32)
//@ resource req *p |-> Option::<i32>::None;
{
    let _x = *p;
}

fn main() {}
